# GameConstructor

./: .gitmodules  CMakeLists.txt  README.md  runScript.bash  Заметки.txt
.kdev4/: GameConstructor.kdev4
ConstructorEngine/: CMakeLists.txt
ConstructorEngine/Shape/: CMakeLists.txt
ConstructorEngine/Shape/Circle/: CMakeLists.txt  Circle.cpp  Circle.hpp
ConstructorEngine/Shape/Rectangle/: CMakeLists.txt  Rectangle.cpp  Rectangle.hpp
ConstructorEngine/Shape/Shape2D/: CMakeLists.txt  Shape2D.cpp  Shape2D.h
ConstructorEngine/Shape/Triangle/: CMakeLists.txt  Triangle.cpp  Triangle.hpp
ConstructorEngine/Sprite2D/: CMakeLists.txt  Sprite2D.cpp  Sprite2D.h
ConstructorEngine/core/: CMakeLists.txt
ConstructorEngine/core/BufferManager/: BufferManager.cpp  BufferManager.h  CMakeLists.txt
ConstructorEngine/core/Event/: CMakeLists.txt  event.cpp  event.h
ConstructorEngine/core/Render/: CMakeLists.txt  Drawable.h  Render.h  RenderItem.cpp  RenderItem.h  Renderer.cpp  Renderer.h
ConstructorEngine/core/TextureManager/: CMakeLists.txt  TextureManager.cpp  TextureManager.h
ConstructorEngine/core/Window/: CMakeLists.txt  window.cpp  window.h
ConstructorEngine/core/glad/include/glad/: glad.h
ConstructorEngine/lib/: CMakeLists.txt
ConstructorEngine/lib/glad/: CMakeLists.txt
ConstructorEngine/lib/glad/gladLib/: glad.c
Example/: CMakeLists.txt
Example/LoadTextureTest/: CMakeLists.txt  main.cpp
Example/ShapeRender/: CMakeLists.txt  main.cpp
Example/SortVisualize/: CMakeLists.txt  main.cpp
Example/TestRenderer/: CMakeLists.txt  main.cpp
